--- a/app/src/main/res/layout/race_results_listview.xml
+++ b/app/src/main/res/layout/race_results_listview.xml
@@ -52,7 +52,7 @@
 
         <TextView
             android:id="@+id/timeRaceResults"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="190dp"
             android:fontFamily="@font/formula1_regular"
