--- a/app/src/main/res/navigation/formula_navigation_graph.xml
+++ b/app/src/main/res/navigation/formula_navigation_graph.xml
@@ -98,8 +98,8 @@
             android:id="@+id/action_raceFragment2_to_raceResultsFragment"
             app:destination="@id/raceResultsFragment" />
         <action
-            android:id="@+id/action_raceFragment2_to_accountFragment"
-            app:destination="@id/accountFragment" />
+            android:id="@+id/action_raceFragment2_to_liveChatFragment"
+            app:destination="@id/liveChatFragment" />
     </fragment>
     <fragment
         android:id="@+id/circuitInfoFragment"
@@ -232,4 +232,8 @@
             app:argType="string"
             android:defaultValue="No Email"/>
     </fragment>
+    <fragment
+        android:id="@+id/liveChatFragment"
+        android:name="com.programmazionemobile.formula1app.LiveChatFragment"
+        android:label="LiveChatFragment" />
 </navigation>
