--- a/app/src/main/res/layout/fragment_account_logged.xml
+++ b/app/src/main/res/layout/fragment_account_logged.xml
@@ -243,6 +243,7 @@
             app:layout_constraintTop_toTopOf="@+id/imageView31" />
 
         <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/notificationSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="14dp"
