--- a/app/src/main/res/layout/header_constructors_standings.xml
+++ b/app/src/main/res/layout/header_constructors_standings.xml
@@ -12,13 +12,13 @@
     android:elevation="20dp">
 
     <TextView
-        android:id="@+id/headerDriversText"
+        android:id="@+id/headerConstructorText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
         android:layout_marginBottom="17dp"
         android:fontFamily="@font/formula1_bold"
-        android:text="Drivers"
+        android:text="Constructors"
         android:textColor="#000000"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
