--- a/app/src/main/res/layout/fragment_constructor_profile.xml
+++ b/app/src/main/res/layout/fragment_constructor_profile.xml
@@ -430,7 +430,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/ConstructorProfileImageBackground"
                 android:layout_width="330dp"
                 android:layout_height="250dp"
                 android:layout_marginStart="5dp"
