--- a/app/src/main/res/layout/fragment_driver_profile.xml
+++ b/app/src/main/res/layout/fragment_driver_profile.xml
@@ -466,7 +466,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/DriverProfileName" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/ConstructorProfileImageBackground"
                 android:layout_width="176dp"
                 android:layout_height="124.5dp"
                 android:layout_marginTop="24dp"
@@ -526,7 +526,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.122"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imageView2" />
+                app:layout_constraintTop_toTopOf="@+id/ConstructorProfileImageBackground" />
 
             <ImageView
                 android:id="@+id/DriverProfileImage"
