--- a/app/src/main/res/layout/fragment_qualifying.xml
+++ b/app/src/main/res/layout/fragment_qualifying.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/formula1_bold"
-            android:text="QUALIFYING RESULTS"
+            android:text="@string/qualifying_results"
             android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/imageView25"
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="United States Grand Prix"
+            android:text="@string/grand_prix_name"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="@+id/textView9"
             app:layout_constraintStart_toStartOf="@+id/textView9"
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="7dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="POS"
+            android:text="@string/pos"
             android:textColor="#000000"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView28"
@@ -85,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/formula1bold3"
-            android:text="RESULTS"
+            android:text="@string/results"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="@+id/fLapBackgroundqualifyingResults"
             app:layout_constraintStart_toStartOf="@+id/fLapBackgroundqualifyingResults"
@@ -97,7 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="47dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="DRIVER"
+            android:text="@string/driver"
             android:textColor="#000000"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView13"
@@ -111,7 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="Q1"
+            android:text="@string/q1"
             android:textColor="#000000"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView15"
@@ -125,7 +125,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="215dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="Q2"
+            android:text="@string/q2"
             android:textColor="#000000"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@+id/q1QualifyingTimeHeader"
@@ -139,7 +139,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="80dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="Q3"
+            android:text="@string/q3"
             android:textColor="#000000"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@+id/q2QualifyingTimeHeader"
@@ -198,7 +198,7 @@
             android:layout_marginTop="159dp"
             android:layout_marginEnd="11dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="DATA NOT  YET AVAILABLE"
+            android:text="@string/data_not_yet_available"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="28sp"
