--- a/app/src/main/res/layout/fragment_race_results.xml
+++ b/app/src/main/res/layout/fragment_race_results.xml
@@ -8,8 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#000000">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/raceResultsButton"
@@ -61,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:fontFamily="@font/formula1_bold"
-            android:text="FASTEST LAP"
+            android:text="@string/fastest_lap"
             android:textColor="#000000"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/fLapBackgroundRaceResults"
@@ -75,7 +74,7 @@
             android:layout_marginTop="6dp"
             android:layout_marginEnd="45dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="1.44.454"
+            android:text="@string/flap_placeholder"
             android:textColor="#000000"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@+id/fLapBackgroundRaceResults"
@@ -87,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="(HAMILTON)"
+            android:text="@string/driver_FLAP"
             android:textColor="#000000"
             android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="@+id/fLapRaceResults"
@@ -100,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/formula1_bold"
-            android:text="RACE RESULTS"
+            android:text="@string/race_results"
             android:textColor="#000000"
             android:textSize="28sp"
             app:layout_constraintEnd_toEndOf="@+id/imageView25"
@@ -113,7 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="United States Grand Prix"
+            android:text="@string/grand_prix_name"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="@+id/textView9"
             app:layout_constraintStart_toStartOf="@+id/textView9"
@@ -136,7 +135,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="POS"
+            android:text="@string/pos"
             android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="@+id/imageView28"
             app:layout_constraintStart_toStartOf="@+id/imageView28"
@@ -148,7 +147,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="DRIVER"
+            android:text="@string/driver"
             android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="@+id/imageView28"
             app:layout_constraintStart_toEndOf="@+id/textView13"
@@ -161,7 +160,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="74dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="TIME"
+            android:text="@string/time"
             android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="@+id/imageView28"
             app:layout_constraintStart_toEndOf="@+id/textView15"
@@ -174,7 +173,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="80dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="PTS"
+            android:text="@string/pts"
             android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="@+id/imageView28"
             app:layout_constraintStart_toEndOf="@+id/q1QualifyingTimeHeader"
@@ -223,7 +222,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/formula1_bold"
-            android:text="RACE"
+            android:text="@string/race"
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/raceResultsButton"
@@ -236,7 +235,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/formula1_bold"
-            android:text="SPRINT"
+            android:text="@string/sprint"
             android:textColor="#070707"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/sprintResultsButton"
@@ -264,7 +263,7 @@
             android:layout_marginTop="159dp"
             android:layout_marginEnd="11dp"
             android:fontFamily="@font/formula1_regular"
-            android:text="DATA NOT  YET AVAILABLE"
+            android:text="@string/data_not_yet_available"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="28sp"
