--- a/app/src/main/res/layout/fragment_circuit_info.xml
+++ b/app/src/main/res/layout/fragment_circuit_info.xml
@@ -254,6 +254,17 @@
                 app:layout_constraintStart_toStartOf="@+id/imageView18"
                 app:layout_constraintTop_toTopOf="@+id/imageView18" />
 
+
+            <ImageView
+                android:id="@+id/circuitInfoBackArrow"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="40dp"
+                android:src="@drawable/back_arrow_white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
