--- a/app/src/main/res/layout/fragment_qualifying.xml
+++ b/app/src/main/res/layout/fragment_qualifying.xml
@@ -207,5 +207,17 @@
             app:layout_constraintStart_toStartOf="@+id/qualifyingResultsNotAvailableOverlay"
             app:layout_constraintTop_toTopOf="@+id/qualifyingResultsNotAvailableOverlay" />
 
+
+        <ImageView
+            android:id="@+id/qualifyingResultsBackArrow"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/back_arrow_black"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView25"
+            app:layout_constraintStart_toStartOf="@+id/imageView25"
+            app:layout_constraintTop_toTopOf="@+id/imageView25"
+            app:layout_constraintVertical_bias="0.52" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
