--- a/app/src/main/res/layout/header_race_recycler_view.xml
+++ b/app/src/main/res/layout/header_race_recycler_view.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/formula1_bold"
-        android:text="Calendario"
+        android:text="Calendar"
         android:textAlignment="gravity"
         android:textColor="@color/black"
         android:textSize="35sp"
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/formula1_bold"
-            android:text="Prossimo evento"
+            android:text="Next Event"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="30sp"
