--- a/app/src/main/res/layout/fragment_livechat.xml
+++ b/app/src/main/res/layout/fragment_livechat.xml
@@ -9,6 +9,18 @@
     android:background="#111F3C">
 
     <ImageView
+        android:id="@+id/back"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/back_arrow_white"
+        app:layout_constraintBottom_toBottomOf="@+id/intestazione"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white"
+        android:translationZ="20dp"/>
+
+    <ImageView
         android:id="@+id/intestazione"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -22,15 +34,13 @@
         android:id="@+id/intestazioneText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:fontFamily="@font/formula1_bold"
-        android:text=""
+        android:textSize="14sp"
         android:textColor="@color/white"
         android:translationZ="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/intestazione"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/back"
         app:layout_constraintTop_toTopOf="@+id/intestazione" />
 
     <FrameLayout
